--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="hearts" id="hearts"></div>
 
     <h1>Will you be my Valentine? 💘</h1>
-    <p>Select <b>Yes</b> if you love me. Select <b>No</b> if you enjoy lying to yourself.</p>
+    <p>Select <b>Yes</b> if you love me. Select <b>No</b>... if you can.</p>
 
     <div class="buttons" id="btnRow">
       <button id="yesBtn">Yes</button>
@@ -369,3 +369,4 @@
   </script>
 </body>
 </html>
+
