--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
           </label>
 
           <label class="menuItem">
-            <input type="radio" name="date" value="Movie night + blankets 🎬🧺" />
+            <input type="radio" name="date" value="Movie night + Snacks 🎬🧺" />
             <span><b>Movie night + blankets</b><br/>Cozy mode. I will share snacks (probably).</span>
           </label>
 
           <label class="menuItem">
-            <input type="radio" name="date" value="Snacks + a walk + yapping time 🍿🚶" />
-            <span><b>Snacks + a walk + yapping time</b><br/>Quality time + fresh air credits.</span>
+            <input type="radio" name="date" value="Snacks + a walk + yapping sesh🚶" />
+            <span><b>Snacks + a walk + yapping time</b><br/>Quality time + Fresh air.</span>
           </label>
 
           <button id="confirmDate" class="confirmBtn">Confirm my choice</button>
@@ -369,4 +369,5 @@
   </script>
 </body>
 </html>
+
 
