--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
 
           <label class="menuItem">
             <input type="radio" name="date" value="Movie night + Snacks 🎬🧺" />
-            <span><b>Movie night + blankets</b><br/>Cozy mode. I will share snacks (probably).</span>
+            <span><b>Movie night + Snacks</b><br/>Cozy mode. I will share snacks (probably).</span>
           </label>
 
           <label class="menuItem">
-            <input type="radio" name="date" value="Snacks + a walk + yapping sesh🚶" />
-            <span><b>Snacks + a walk + yapping time</b><br/>Quality time + Fresh air.</span>
+            <input type="radio" name="date" value="Snacks + a walk + yap sesh🚶" />
+            <span><b>Snacks + a walk + yap sesh</b><br/>Quality time + Fresh air.</span>
           </label>
 
           <button id="confirmDate" class="confirmBtn">Confirm my choice</button>
@@ -369,5 +369,6 @@
   </script>
 </body>
 </html>
+
 
 
